# tool-convert-url-to-test

./: package-lock.json  package.json  temp.txt
.cargo/: config.toml
.github/workflows/: cicd.yml
scripts/: quick-release.sh  release.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
